# tessellation

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/tessellation/: __init__.py  dim2.py  dim3.py
tests/: test_tessellation.py
